同步于: 12月7日16时52分

--- a/pages/p7/938210.md
+++ b/pages/p7/938210.md
@@ -1,4 +1,4 @@
-### 高层或早知青岛疫情 网曝内幕(组图)
+### 17则古训赠当今(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align:center">
-  <img alt="青岛胸科医院成为武汉肺炎定点医院，青岛市北区核酸检测（图片来源：视频截图）" src="https://img3.secretchina.com/pic/2020/10-13/p2795611a799467816-ss.jpg" style="height:337px; width:600px"/>
+  <img alt="行舍其华，言去其辩。（看中国：手绘插画 志清）" src="https://img2.secretchina.com/pic/2019/4-8/p2398774a771091283-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   青岛胸科医院成为武汉肺炎定点医院，青岛市北区核酸检测（图片来源：视频截图）
+   行舍其华，言去其辩。（看中国：手绘插画 志清）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,62 +21,67 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年10月13日讯】
   <strong>
-   青岛
-  </strong>
-  在长假后突发
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/武汉肺炎" target="_blank">
-    武汉肺炎
+   <span href="https://www.secretchina.com/news/gb/tag/古训" target="_blank">
+    古训
    </span>
   </strong>
-  疫情，目前已有6例确诊和6例无症状感染者。官方已经紧急启动全市筛查。日前网络再传出
+  是先人
   <strong>
-   上海长海医院
+   智慧
   </strong>
-  9月29日就发出的内部通知：凡节日拟去山东青岛的请暂时不要出行。网友表示：细思极恐，上海长海医院未卜先知。
+  的
+  <strong>
+   结晶
+  </strong>
+  ，已在国人心中流淌千百年，其中蕴藏的智慧，应用在待人处世上，常有意想不到的效果，足以让人受用一生。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  根据网友上传的
-  <span href="https://zh.wikipedia.org/wiki/%E4%B8%8A%E6%B5%B7%E9%95%BF%E6%B5%B7%E5%8C%BB%E9%99%A2" target="_blank">
-   上海长海医院
-  </span>
-  内部工作群组中的内部通知：凡节日期间拟去青岛的请暂时不要出行。有网友分析认为：29日医院就收到内部通知，说明高层早就知道青岛将会出现疫情。
+  古训今译，古训今鉴，读而思，思而行，行而达。下面收集了17句古训金言，望尔获益。
  </p>
- <p style="text-align:center">
-  <img alt="上海长海医院内部通知（图片来源：网络）" src="https://img3.secretchina.com/pic/2020/10-13/p2795621a867803601-ss.jpg" style="height:709px; width:600px"/>
+ <p>
+  【古训1】刚直，则当忘身以为国，履正以无偏。（ 据《金史•王修传》）
   <br>
-   上海长海医院内部通知（图片来源：网络）
+   【今译】刚直之人，就应当为国家舍死忘生，做事正直。而不偏听偏信。
   </br>
  </p>
  <p>
-  而据
-  <span href="https://www.secretchina.com/news/gb/tag/青岛" target="_blank">
-   青岛
-  </span>
-  市文化和旅游局监测数据显示，今年十一假期，青岛市共接待游客447.58万人次，9月28日至10月8日，青岛火车站共计发送旅客74.4万人次。网友质疑：“这不就是刻意散毒吗？”
- </p>
- <p style="text-align:center">
-  <img alt="青岛长假期间共接待游客447.58万人次（图片来源：网络）" src="https://img3.secretchina.com/pic/2020/10-13/p2795631a513928926-ss.jpg" style="height:411px; width:600px"/>
+  【古训2】岂有为人，知过而不能改者乎!（据《元史•木华黎传》）
   <br>
-   青岛长假期间共接待游客447.58万人次（图片来源：网络）
+   【今译】 难道有人知道做错了，还不能改正的吗?（知错而不改，能叫人吗？）
   </br>
  </p>
  <p>
-  据官媒《新华网》13日的报导，自10月11日青岛市卫健委发布疫情通报后，青岛市胸科医院已经停诊，同时青岛市第三人民医院也停诊做备用医院启用。
+  【古训3】伎巧为丧国斧斤，珠玉为荡心醯毒。侈丽纤美，不可以不遏。志骄于业泰，体逸于时安。（据《新唐书•后妃传》(上)）
+  <br>
+   【今译】奸诈诡谲是丧亡国家的斧头，珍珠美玉是心志摇荡的毒酒。奢华纤巧之美，不可以不加阻止。志气骄惰，是由于事业的安泰；身体淫乐，是由于处境的安闲。
+  </br>
+ </p>
+ <p>
+  【古训4】任重道悠，利深祸速。（据《后汉书•皇后纪》上)
+  <br>
+   【今译】官职重大的人，任职的时间越长，求利越多，招祸越快。
+   <br>
+    <br>
+     【古训5】自古圣帝必以俭约为美，乱主必以奢侈贻患。（据《魏书•韩麒麟传》）
+     <br>
+      【今译】自古以来，圣明的帝王一定把俭朴当作好事；而昏庸的君主则一定因为奢侈，而种下祸患。
+     </br>
+    </br>
+   </br>
+  </br>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -91,50 +96,9 @@
   </div>
  </center>
  <p>
-  网友12日发布的视频显示：青岛市北区开始大规模的核酸检测。不仅如此，除青岛市第三人民医院外，胸科医院也成为了接待武汉肺炎患者的定点医院。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <blockquote class="twitter-tweet">
-  <p dir="ltr" lang="zh">
-   青岛市北区开始核酸检测了这样的人群密度，到底是打算加重传染还是减少传染呢其实只要收了钱 就可以了。本来 传出几个感染 然后必须全民检测 就是个忽悠。 14亿 大家算算 已经收了几个城市了？ 武汉。天津。北京。哈尔滨。大连。新疆。云南。青岛。都是没发大水的地方。 而发大水的地方聚集不是最多吗
-   <span href="https://t.co/MijcB0MJbY">
-    pic.twitter.com/MijcB0MJbY
-   </span>
-  </p>
-  <center>
-   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-    <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-    </div>
-   </div>
-   <div>
-    <center>
-     <div id="div-gpt-ad-1589559869784-0">
-     </div>
-    </center>
-   </div>
-  </center>
-  — 青山兰 (@qingshanlan)
-  <span href="https://twitter.com/qingshanlan/status/1315632886469595136?ref_src=twsrc%5Etfw">
-   October 12, 2020
-  </span>
- </blockquote>
- <p>
-  根据大陆媒体《财经网》报导，10月11日，
-  <span href="https://edit2016.secretchina.com/cms2016/showatext?id=948973&amp;admin=admin&amp;code=gb" target="_blank">
-   青岛
-  </span>
-  市卫健委发布消息，该市新增3例武汉肺炎无症状感染者，而3例无症状感染者与青岛市胸科医院相关联。青岛市胸科医院全部科室已经停诊。青岛市第三人民医院也已作为武汉肺炎备用医院启用，门诊急诊全部停诊。
+  【古训6】自古以来，身居富贵，能知止足者，甚少。（据《旧唐书•李靖传》）
+  <br/>
+  【今译】自古以来，身居富贵而能知道适可而止的人，很少。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -149,7 +113,9 @@
   </div>
  </center>
  <p>
-  另据《中新网》报导，10月11日，青岛市发现3例武汉肺炎无症状感染者后，立即组织开展大规模的流调排查和分类检测，将密切接触者和市胸科医院相关人员作为高风险人群进行重点监测。共排查到密切接触者和市胸科医院所有在院患者及陪护人员377人，其中新增核酸检测结果阳性9人，包括8名市胸科医院在院患者及陪护人员、1名患者家属，经专家组判定，其中4例为确诊病例、5例为无症状感染者。
+  【古训7】行舍其华，言去其辩。（据《晋书•应贞传》）
+  <br/>
+  【今译】 行动应舍弃浮华（做事要诚实），言论要舍弃诡辩（说话要正直）。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -164,7 +130,65 @@
   </div>
  </center>
  <p>
-  报导还指已制定并启动全员检测方案，社区检测正在加快推进，3天内对市南、市北、李沧、崂山、城阳五区检测全覆盖，5天内对全市检测全覆盖。另据青岛市疫情防控部的通知，要求在3天之内实现约600万人口的核酸采样工作。
+  【古训8】行道之人，德行文学为根株，正直刚毅为柯叶。有根无叶，或可俟时；有叶无根，膏雨所不能活也。至于孝慈、友悌、忠信、笃行，乃食之醯酱，可一日无哉?   （据《新唐书•柳公绰传》）
+  <br/>
+  【今译】遵行大道的人，以德行和文学为根株，以正直刚毅为枝叶。有根没有叶，尚且可以等待时日；有叶没有根，则肥沃的雨水也不能救活它。至于孝慈、友悌、忠信、诚实，犹如吃的酱醋，能够一天没有吗?
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  【古训9】行正道，循礼义，敦友爱，尽公忠。（据《清史稿•太宗本纪》)
+  <br/>
+  【今译】按正确的道理、准则做事，遵循礼法、道义，忠诚地促成友爱，竭力为公事效忠。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  【古训10】杀身成仁，虽死犹生。（据《明史•晋恭王朱桐传》）
+  <br/>
+  【今译】杀身成仁，即使是死了，也像活着一样受人尊敬。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  【古训11】名者，公器也。不可多取。（据《三国志•张温传》）
+  <br/>
+  【今译】名位，是天下人所共有的。不可以一个人贪心多取。
+  <br/>
+  <br/>
+  【古训12】危邦不入，乱邦不居。（据《晋书•张方传》）
+  <br/>
+  【今译】处于危险之中的国家，不要进入；处于动乱的国家，不要停留。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -183,7 +207,9 @@
   </ins>
  </center>
  <p>
-  网友评论：“报复性旅游狂欢过后，就是末日的来临。青岛绝不是个例。”
+  【古训13】兆始恶者有终殃，积不善者无余庆。（据《北史•崔宏传》）
+  <br/>
+  【今译】出现坏的征兆，最终必有灾祸；长期做坏事的人，不会有好的结局。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -198,7 +224,9 @@
   </div>
  </center>
  <p>
-  “不是都抗瘟疫胜利了么。”
+  【古训14】汝惟不矜，天下莫与汝争能；汝惟不伐，天下莫与汝争功。（据《隋书•李谔传》）
+  <br/>
+  【今译】只要你不自以为贤能，天下就没有与你竞争才能的人；只要你不自我夸耀，天下就没有与你争夺功劳的人。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -213,7 +241,9 @@
   </div>
  </center>
  <p>
-  “600萬3天，呵呵呵，改1天不？！都唬了就要有氣勢”。
+  【古训15】进不知退，取祸之道也！（据《新唐书•高智周传》）
+  <br/>
+  【今译】只知前进不知后退，是招取祸败的道途。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -228,11 +258,26 @@
   </div>
  </center>
  <p>
-  “海军军医大学第一附属医院
-  <span href="https://www.secretchina.com/news/gb/tag/上海" target="_blank">
-   上海
-  </span>
-  长海医院在9月29日就发出内部通知：凡节日期间拟去青岛的请暂时不要出行。而屁民们一无所知蜂拥而至！国殇期间的狂欢不知多少人为此来买单。现在爆出的是青岛，但是不要慌，该来的总会来的！只怪病毒没设党支部！”
+  【古训16】志骄则好生事，器小则无远图。（据《明史•太祖本纪》(三)）
+  <br/>
+  【今译】志气高傲，容易惹是生非；器量狭小，就不会有长远打算。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  【古训17】声过其实，古人所不取。攻乎异端，为政之甚害。（据《晋书•张闿》）
+  <br/>
+  【今译】声誉超过本人的实际情况，这是古人所不赞成的。攻击不同的观点与学说，对治理国家，是有严重危害的！
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -264,7 +309,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -296,13 +341,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/949098.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/949098.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/949098.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/13/949098.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/02/938210.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p1/949098.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p7/938210.md' width='0px' height='0px'/>
