--- a/pages/soh6/450913.md
+++ b/pages/soh6/450913.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="川普團隊律師，前紐約市長朱利安尼（Rudy Giuliani）。 （AP）" src="https://img.soundofhope.org/2020-12/777777-1607301426175.jpeg"/>
+<div><img alt="川普团队律师，前纽约市长朱利安尼（Rudy Giuliani）。 （AP）" src="https://img.soundofhope.org/2020-12/777777-1607301426175.jpeg"/>
 <br/><figcaption class="caption">
- 川普團隊律師，前紐約市長朱利安尼（Rudy Giuliani）。 （AP）
+ 川普团队律师，前纽约市长朱利安尼（Rudy Giuliani）。 （AP）
 </figcaption></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
@@ -17,85 +17,85 @@
 <div><div class="Content__Wrapper sc-1bvya0-0 grZQxZ">
  <p class="meta-top">
   <span class="meta">
-   【希望之聲2020年12月6日】（本台記者凌杉綜合報導）
+   【希望之声2020年12月6日】（本台记者凌杉综合报导）
   </span>
-  美國總統川普與第一夫人梅拉尼婭週六（12月5日）趕赴喬治亞州大型集會，爲兩名共和黨蔘議員助選，集會期間，川普對民衆展示了作爲證據的富爾頓縣計票中心監控視頻。在川普團隊舉行集會之際，喬治亞州的議員再度推進了質疑選舉結果的做法。而川普團隊在推進美國高院案例方面也有新進展。
+  美国总统川普与第一夫人梅拉尼娅周六（12月5日）赶赴乔治亚州大型集会，为两名共和党参议员助选，集会期间，川普对民众展示了作为证据的富尔顿县计票中心监控视频。在川普团队举行集会之际，乔治亚州的议员再度推进了质疑选举结果的做法。而川普团队在推进美国高院案例方面也有新进展。
  </p>
  <p>
-  週日，川普私人律師
-  <ok href="/term/15066?lang=b5">
+  周日，川普私人律师
+  <ok href="/term/15066">
    朱利安尼
   </ok>
-  確診冠狀病毒（中共病毒），根據相關消息，
-  <ok href="/term/15066?lang=b5">
+  确诊冠状病毒（中共病毒），根据相关消息，
+  <ok href="/term/15066">
    朱利安尼
   </ok>
-  正在醫院中康復療養，目前得到良好的休息。
+  正在医院中康复疗养，目前得到良好的休息。
  </p>
  <p>
-  以下是希望之聲整合的北美時間12月6日（週日）選舉新聞更新：
+  以下是希望之声整合的北美时间12月6日（周日）选举新闻更新：
  </p>
  <h2>
   <ok href="https://www.soundofhope.org/post/451003">
-   紐約時報：美司法部長巴爾準備本月離職
+   纽约时报：美司法部长巴尔准备本月离职
   </ok>
  </h2>
  <p>
-  美國左翼媒體《紐約時報》週日報道引用消息人士言論說，美國司法部長巴爾正在準備籌備本月離職司法部。相關消息尚未得到官方證實。
+  美国左翼媒体《纽约时报》周日报道引用消息人士言论说，美国司法部长巴尔正在准备筹备本月离职司法部。相关消息尚未得到官方证实。
  </p>
  <p>
-  上週，巴爾曾在接受美聯社採訪時表示，他的部門一直關注關於選舉的申訴，但沒有看到任何能夠改變選舉的證據。相關說法引發各界人士批評。在巴爾發佈相關言論後，川普表示不準備過早談論是否放棄對巴爾的支持，他表示，仍然希望巴爾的部門能夠承擔調查選舉舞弊的責任。
+  上周，巴尔曾在接受美联社采访时表示，他的部门一直关注关于选举的申诉，但没有看到任何能够改变选举的证据。相关说法引发各界人士批评。在巴尔发布相关言论后，川普表示不准备过早谈论是否放弃对巴尔的支持，他表示，仍然希望巴尔的部门能够承担调查选举舞弊的责任。
  </p>
  <h2>
-  FBI突襲鳳凰城一男子的家 美媒：涉訪問亞利桑那選民數據
+  FBI突袭凤凰城一男子的家 美媒：涉访问亚利桑那选民数据
  </h2>
  <p style="text-align:start;margin-bottom:15px">
-  美聯邦FBI特工在搖擺州亞利桑那的馬里科帕縣噴泉山地區突襲了一名56歲男子的家。本次行動沒收了八個硬盤驅動器、三臺計算機和一袋USB隨身碟。
+  美联邦FBI特工在摇摆州亚利桑那的马里科帕县喷泉山地区突袭了一名56岁男子的家。本次行动没收了八个硬盘驱动器、三台计算机和一袋USB随身碟。
  </p>
  <p>
-  根據亞利桑那地方媒體azcentral週日報道，搜查令尋求從10月21日至11月初有關計算機入侵選民系統或串謀實施計算機入侵的記錄。報道說，馬里科帕（Maricopa）縣的IT安全人員確定了此次入侵。
- </p>
- <h2>
-  大法官阿利托將賓州案例響應期限提前
- </h2>
- <p>
-  大法官阿利托週日宣佈，高院將川普團隊在賓州緊急訴訟的響應截止日期提前，從原本的下星期三（12月9日）下午4點提前至星期二（12月8日）上午9點。
- </p>
- <p>
-  相關案例尋求在美國最高法院上訴，訴訟內容涉及賓州選舉中的郵寄投票流程違反州憲法。
+  根据亚利桑那地方媒体azcentral周日报道，搜查令寻求从10月21日至11月初有关计算机入侵选民系统或串谋实施计算机入侵的记录。报道说，马里科帕（Maricopa）县的IT安全人员确定了此次入侵。
  </p>
  <h2>
-  川普團隊進入密歇根州審查Dominion選舉系統
+  大法官阿利托将宾州案例响应期限提前
  </h2>
  <p>
-  週日，川普團隊高級法律顧問、憲法專家珍娜·埃利斯（Jenna Ellis）告訴福克斯新聞，川普團隊在週日早上8點半其進入密歇根州安特里姆縣（Antrim County）審查22臺Dominion計票機，調查時間約爲8小時，結果預計在48小時之後公開。
+  大法官阿利托周日宣布，高院将川普团队在宾州紧急诉讼的响应截止日期提前，从原本的下星期三（12月9日）下午4点提前至星期二（12月8日）上午9点。
  </p>
  <p>
-  在上週五（12月4日），密歇根州法官宣佈，授權川普團隊人員對密歇根州22臺Dominion設施進行審查。川普私人律師
-  <ok href="/term/15066?lang=b5">
-   朱利安尼
-  </ok>
-  表示，這是誠實選舉的“巨大勝利”。
+  相关案例寻求在美国最高法院上诉，诉讼内容涉及宾州选举中的邮寄投票流程违反州宪法。
  </p>
  <h2>
-  <ok href="/term/15066?lang=b5">
-   朱利安尼
-  </ok>
-  確診冠狀病毒
+  川普团队进入密歇根州审查Dominion选举系统
  </h2>
  <p>
-  週日，川普私人律師
-  <ok href="/term/15066?lang=b5">
+  周日，川普团队高级法律顾问、宪法专家珍娜·埃利斯（Jenna Ellis）告诉福克斯新闻，川普团队在周日早上8点半其进入密歇根州安特里姆县（Antrim County）审查22台Dominion计票机，调查时间约为8小时，结果预计在48小时之后公开。
+ </p>
+ <p>
+  在上周五（12月4日），密歇根州法官宣布，授权川普团队人员对密歇根州22台Dominion设施进行审查。川普私人律师
+  <ok href="/term/15066">
    朱利安尼
   </ok>
-  傳出確診冠狀病毒（中共病毒）的消息，美國總統川普宣佈了該消息，並對他表示慰問。
+  表示，这是诚实选举的“巨大胜利”。
+ </p>
+ <h2>
+  <ok href="/term/15066">
+   朱利安尼
+  </ok>
+  确诊冠状病毒
+ </h2>
+ <p>
+  周日，川普私人律师
+  <ok href="/term/15066">
+   朱利安尼
+  </ok>
+  传出确诊冠状病毒（中共病毒）的消息，美国总统川普宣布了该消息，并对他表示慰问。
  </p>
  <p>
   “
-  <ok href="/term/15066?lang=b5">
+  <ok href="/term/15066">
    朱利安尼
   </ok>
-  是迄今爲止紐約市歷史上最偉大的市長，他一直不懈地揭露美國曆史上最腐敗的選舉（到目前爲止最腐敗的！），對中（共）國病毒的檢測爲陽性。很快就好起來，魯迪，我們將繼續前進！！！”，川普在推特中說。
+  是迄今为止纽约市历史上最伟大的市长，他一直不懈地揭露美国历史上最腐败的选举（到目前为止最腐败的！），对中（共）国病毒的检测为阳性。很快就好起来，鲁迪，我们将继续前进！！！”，川普在推特中说。
  </p>
  <div class="soh-embed">
   <div class="soh-embed-inner">
@@ -106,10 +106,10 @@
   </div>
  </div>
  <p>
-  <ok href="/term/15066?lang=b5">
+  <ok href="/term/15066">
    朱利安尼
   </ok>
-  轉發了川普的該條推文，並表示，“感謝我所有的朋友和支持者的祈禱和祝福。我得到了很好的照顧，感覺很好。將快速恢復並跟上一切。”
+  转发了川普的该条推文，并表示，“感谢我所有的朋友和支持者的祈祷和祝福。我得到了很好的照顾，感觉很好。将快速恢复并跟上一切。”
  </p>
  <div class="soh-embed">
   <div class="soh-embed-inner">
@@ -120,25 +120,25 @@
   </div>
  </div>
  <p>
-  <ok href="/term/15066?lang=b5">
+  <ok href="/term/15066">
    朱利安尼
   </ok>
-  的兒子安德魯·
-  <ok href="/term/15066?lang=b5">
+  的儿子安德鲁·
+  <ok href="/term/15066">
    朱利安尼
   </ok>
-  轉發川普的推文說，“我的父親
-  <ok href="/term/15066?lang=b5">
+  转发川普的推文说，“我的父亲
+  <ok href="/term/15066">
    朱利安尼
   </ok>
-  正在休息，得到很好的照顧，感覺很好。感謝所有關心他健康的朋友。”
+  正在休息，得到很好的照顾，感觉很好。感谢所有关心他健康的朋友。”
  </p>
  <p>
-  在當天晚些時候，
-  <ok href="/term/15066?lang=b5">
+  在当天晚些时候，
+  <ok href="/term/15066">
    朱利安尼
   </ok>
-  被指送入醫院進行療養。
+  被指送入医院进行疗养。
  </p>
  <div class="soh-embed">
   <div class="soh-embed-inner">
@@ -149,19 +149,19 @@
   </div>
  </div>
  <h2>
-  喬治亞州參議員發佈調查選舉舞弊請願書
+  乔治亚州参议员发布调查选举舞弊请愿书
  </h2>
  <p>
-  喬治亞州的四名參議員星期六（5日）發表了請願書，要求舉行選舉調查特別會議。請願書的目的是從議員那裏收集足夠的簽名，以便召開特別會議，解決該州的選舉欺詐問題。
+  乔治亚州的四名参议员星期六（5日）发表了请愿书，要求举行选举调查特别会议。请愿书的目的是从议员那里收集足够的签名，以便召开特别会议，解决该州的选举欺诈问题。
  </p>
  <p>
-  在喬治亞州，立法機關可以向州長遞交由五分之三的參院議員簽署的請願書，以召開特別會議。議員們也需要將請願書副本送給州務卿。
+  在乔治亚州，立法机关可以向州长递交由五分之三的参院议员签署的请愿书，以召开特别会议。议员们也需要将请愿书副本送给州务卿。
  </p>
  <p>
-  “我們相信，我們已經到了不能相信選舉結果的地步”，州參議員伯特·瓊斯（Burt Jones）說，“我們的選舉官員普遍無視選舉法律的做法需要果斷的迴應。現在是我們立法機關履行職責的時候了。”
+  “我们相信，我们已经到了不能相信选举结果的地步”，州参议员伯特·琼斯（Burt Jones）说，“我们的选举官员普遍无视选举法律的做法需要果断的回应。现在是我们立法机关履行职责的时候了。”
  </p>
  <p>
-  對此，前聯邦上訴官鮑威爾稱讚說，“喬治亞州取得新進展！發起請願書以進行徹底調查。”
+  对此，前联邦上诉官鲍威尔称赞说，“乔治亚州取得新进展！发起请愿书以进行彻底调查。”
  </p>
  <div class="soh-embed">
   <div class="soh-embed-inner">
@@ -172,28 +172,28 @@
   </div>
  </div>
  <h2>
-  迄今亞利桑那議長已經因疫情關閉衆院一週
+  迄今亚利桑那议长已经因疫情关闭众院一周
  </h2>
  <p>
-  根據美媒OAN記者的說法，亞利桑那議長已經以疫情爲由關閉衆院一週，目前該州的選舉結果仍然正在遭到質疑。
+  根据美媒OAN记者的说法，亚利桑那议长已经以疫情为由关闭众院一周，目前该州的选举结果仍然正在遭到质疑。
  </p>
  <p>
-  “亞利桑那衆議院議長寶沃斯（Rusty Bowers）以‘COVID（中共病毒）’爲由關閉了州衆議院一週。聽起來他需要藉口避免向憤怒的選民解釋爲什麼他拒絕召開
-  <ok href="/term/1465?lang=b5">
-   聽證會
+  “亚利桑那众议院议长宝沃斯（Rusty Bowers）以‘COVID（中共病毒）’为由关闭了州众议院一周。听起来他需要借口避免向愤怒的选民解释为什么他拒绝召开
+  <ok href="/term/1465">
+   听证会
   </ok>
-  並檢查自己所在州的欺詐行爲。這是他們自疫情爆發以來首次關閉州議會。”
+  并检查自己所在州的欺诈行为。这是他们自疫情爆发以来首次关闭州议会。”
  </p>
  <p>
-  11月30日，亞利桑那9名議員召開了與選舉調查相關的
-  <ok href="/term/1465?lang=b5">
-   聽證會
+  11月30日，亚利桑那9名议员召开了与选举调查相关的
+  <ok href="/term/1465">
+   听证会
   </ok>
-  ，由於衆院議長拒絕開放正式
-  <ok href="/term/1465?lang=b5">
-   聽證會
+  ，由于众院议长拒绝开放正式
+  <ok href="/term/1465">
+   听证会
   </ok>
-  場所，相關聽證在鳳凰城凱悅酒店的會議廳順利舉行。
+  场所，相关听证在凤凰城凯悦酒店的会议厅顺利举行。
  </p>
  <div class="soh-embed">
   <div class="soh-embed-inner">
@@ -204,7 +204,7 @@
   </div>
  </div>
  <p>
-  川普團隊高級法律顧問埃利斯表示，衆院議長關閉衆院的舉動“絕對的不必要。從亞利桑那給Rusty Bowers打電話，告訴他不要把冠狀病毒當作藉口！”
+  川普团队高级法律顾问埃利斯表示，众院议长关闭众院的举动“绝对的不必要。从亚利桑那给Rusty Bowers打电话，告诉他不要把冠状病毒当作借口！”
  </p>
  <div class="soh-embed">
   <div class="soh-embed-inner">
@@ -215,16 +215,16 @@
   </div>
  </div>
  <h2>
-  大律師林·伍德就喬治亞州案件籌備聯邦高院上訴
+  大律师林·伍德就乔治亚州案件筹备联邦高院上诉
  </h2>
  <p>
-  川普陣營大律師林·伍德週日（12月6日）表示，第11巡迴法庭的小組駁回了他關於喬治亞州的上訴，這令他可以籌備於最高法院發起相關訴訟。
+  川普阵营大律师林·伍德周日（12月6日）表示，第11巡回法庭的小组驳回了他关于乔治亚州的上诉，这令他可以筹备于最高法院发起相关诉讼。
  </p>
  <p>
-  “我的案子爲司法系統提供了一個機會，可以明確指出，由於州務卿在未經州議會批准的情況下對缺席投票程序進行了實質性變更，這導致喬治亞大選是非法的”，林·伍德表示，“我正在準備向最高法院提交申請。”
+  “我的案子为司法系统提供了一个机会，可以明确指出，由于州务卿在未经州议会批准的情况下对缺席投票程序进行了实质性变更，这导致乔治亚大选是非法的”，林·伍德表示，“我正在准备向最高法院提交申请。”
  </p>
  <p>
-  該案是由林·伍德以選民身份提交發起，林·伍德在推文中指出，選舉舞弊的行爲導致正式選票被非法稀釋，選民被剝奪了平等保護的權利。
+  该案是由林·伍德以选民身份提交发起，林·伍德在推文中指出，选举舞弊的行为导致正式选票被非法稀释，选民被剥夺了平等保护的权利。
  </p>
  <div class="soh-embed">
   <div class="soh-embed-inner">
@@ -235,10 +235,10 @@
   </div>
  </div>
  <p class="meta-btm">
-  責任編輯：張莉莉
+  责任编辑：张莉莉
  </p>
  <p class="meta-btm">
-  本文章或節目經希望之聲編輯製作，轉載請註明希望之聲幷包含原文標題及鏈接。
+  本文章或节目经希望之声编辑制作，转载请注明希望之声并包含原文标题及链接。
  </p>
 </div>
 </div>
