同步于: 12月7日19时2分

--- a/pages/soh6/450913.md
+++ b/pages/soh6/450913.md
@@ -26,7 +26,7 @@
   <ok href="/term/15066">
    朱利安尼
   </ok>
-  确诊冠状病毒（中共病毒），根据相关消息，
+  确诊中共病毒（冠状病毒），根据相关消息，
   <ok href="/term/15066">
    朱利安尼
   </ok>
@@ -81,14 +81,14 @@
   <ok href="/term/15066">
    朱利安尼
   </ok>
-  确诊冠状病毒
+  确诊中共病毒
  </h2>
  <p>
   周日，川普私人律师
   <ok href="/term/15066">
    朱利安尼
   </ok>
-  传出确诊冠状病毒（中共病毒）的消息，美国总统川普宣布了该消息，并对他表示慰问。
+  传出确诊中共病毒（冠状病毒）的消息，美国总统川普宣布了该消息，并对他表示慰问。
  </p>
  <p>
   “
