--- a/pages/p6/926305.md
+++ b/pages/p6/926305.md
@@ -1,4 +1,4 @@
-### 总得让领导抓点什么(图)
+### 北宋皇帝亲自出6道题 难倒无数才子(组图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align:center">
-  <img alt="标语牌上写着“党政军民学 东西南北中 党是领导一切的”。" src="https://img3.secretchina.com/pic/2020/9-10/p2773352a362589757-ss.jpg"/>
+  <img alt="宋徽宗绘《唐十八学士》局部" src="https://img2.secretchina.com/pic/2019/6-25/p2454151a458442205-ss.jpg"/>
   <br>
-   标语牌上写着“党政军民学 东西南北中 党是领导一切的”。（图片来源：公有领域）
+   宋徽宗是画家，是诗人，是书法家。图为宋徽宗绘《唐十八学士》局部。（图片来源：国立故宫博物院）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,46 +21,54 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看
-  <span href="https://www.secretchina.com" target="_blank">
-   中国
-  </span>
-  2020年10月6日讯】请听题：
+  对于
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/宋徽宗" target="_blank">
+    宋徽宗
+   </span>
+  </strong>
+  ，他作为
+  <strong>
+   皇帝
+  </strong>
+  丢了江山，并非明君所为，这是他的失败。而如果作为一个普通人，他又是那么的迷人。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  假如你参加全国游泳比赛被淘汰，可能是因为什么原因？
- </p>
- <p>
-  答：因为引体向上做得不够好。
- </p>
- <p>
-  这还不是段子，而是真事。
- </p>
- <p>
-  因为最近
-  <span href="https://www.secretchina.com/news/gb/tag/体育总局" target="_blank">
-   体育总局
+  我们都知道，除却君王，他是画家，是诗人，是书法家，是运动员，甚至是一个完美的情人，父辈打下来的江山正值盛世，国泰民安，他倒也简单天真，顺势把全部的心思用在了自己热爱的事情上，
+  <span href="https://www.secretchina.com/news/gb/tag/赵佶" target="_blank">
+   赵佶
   </span>
-  连续发文，比如《关于进一步强化基础体能训练恶补体能短板的通知》，体测不达标不能参加奥运会，掀起了运动队的全民体能大比武，还闹出了一些怪事。
+  过的日子应该是所有艺术家梦想中的生活。那个时代，是洋溢着墨香和浓浓的文艺范儿的。
  </p>
  <p>
-  比如全国击剑冠军赛，16进8的比赛不比击剑，比跳绳。因为要领导抓
-  <span href="https://www.secretchina.com/news/gb/tag/体能" target="_blank">
-   体能
+  宋徽宗最大的举措之一便是担任了“翰林图画院”院长，放着
+  <span href="https://www.secretchina.com/news/gb/tag/皇帝" target="_blank">
+   皇帝
   </span>
-  。
+  不当，兢兢业业地当起美术教授，编写教材，亲自授课，培养美术人才。
+ </p>
+ <p>
+  为了把最优秀的人才吸收到画院，徽宗建立考试制度，正式纳入科举考试之中，称“绘画试”。分佛道、人物、山水、鸟兽、花竹、屋木六科，摘古人诗句作为考题，要求考生画出诗句的意境，构思巧妙，不落俗套，做到笔意俱全。
+ </p>
+ <p>
+  不仅如此，宋徽宗还亲自出考题，亲自主考，亲自批卷，专业素质、创新意识考查样样不落下，综合素质过硬才能被录取进入画院。
+ </p>
+ <p>
+  <strong>
+   考题一：野渡无人舟自横
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -75,7 +83,7 @@
   </div>
  </center>
  <p>
-  “洪荒少女”傅园慧游泳比赛预赛第一，结果体能不达标，无缘决赛。王简嘉游泳打破亚洲纪录，也不能进决赛，因为体能测试不达标。
+  此题取自唐朝诗人韦应物的《滁州西涧》。应试者大多画一空舟系于涧边，或者画一鹭鸶立于船上，或者画一鸟落在船杆……
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -90,7 +98,7 @@
   </div>
  </center>
  <p>
-  短跑飞人苏炳添要跑3000米，因为总局要练体能。
+  受到赵佶赏识的却是这样一幅画面，一个卧于船头的船夫，寂寞失落，百无聊赖。作者意在说明此水无人过渡，连摆渡之人也无聊，打起瞌睡来。既突出无乘客，又突出无人“渡”，紧扣诗句。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -105,7 +113,9 @@
   </div>
  </center>
  <p>
-  象棋队也要体能测试，跑1000米。
+  <strong>
+   考题二：踏花归去马蹄香
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -120,7 +130,7 @@
   </div>
  </center>
  <p>
-  还有中国足球……哦不，国足十几年前搞过体能测试，后来效果太明显，放弃了。
+  这个题目也是独具匠心的。如何表现“踏花归来马蹄香”中的“香”？
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -135,7 +145,7 @@
   </div>
  </center>
  <p>
-  就因为这些少数个例，这场体能测试也被网民群嘲，认为是不讲规律一刀切，重走国足的老路。
+  考生们抓耳挠腮，煞费苦心：“香”是抽象的，只能用鼻子闻到，不能用眼睛看到，怎么画出来？
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -150,7 +160,7 @@
   </div>
  </center>
  <p>
-  二
+  有的画家绞尽了脑汁，在“踏花”二字上下功夫，画面上画了许许多多的花瓣儿，一个人骑着马在花瓣儿上行走，表现出游春的意思；有的画家煞费苦心在“马”字上下功夫，画面上的主体是一位跃马扬鞭的少年，在黄昏疾速归来；有的画家运思独苦，在“蹄”字上下功夫，在画面上画了一只大大的马蹄子，特别醒目。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -165,11 +175,7 @@
   </div>
  </center>
  <p>
-  对此，简单聊一点自己的看法。我觉得这种群嘲不合适，不近人情，脱离实际。这其实也是不看
-  <span href="https://www.secretchina.com/news/gb/tag/金庸" target="_blank">
-   金庸
-  </span>
-  造成的。
+  赵佶看了，都很不满意。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -184,7 +190,7 @@
   </div>
  </center>
  <p>
-  体能，是竞技运动的基础。并且不管是抓体能也好，抓轻功也好，内功也好，暗器也好，事实上也都只是一个抓手而已。
+  只有一位画家独具匠心，他不是单纯着眼于诗句中的个别词，而是在全面体会诗句含义的基础上着重表现诗句末的“香”字。他的画面是：在一个夏天的落日近黄昏的时刻，一个游玩了一天的官人骑着马回归乡里，马儿疾驰，马蹄高举，几只蝴蝶追逐着马蹄蹁跹飞舞。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -199,10 +205,7 @@
   </div>
  </center>
  <p>
-  <span href="https://www.secretchina.com/news/gb/tag/领导" target="_blank">
-   领导
-  </span>
-  总是要抓点什么的。工作要有抓手，事业要有抓手，什么都不抓，他怎么领导呢。就连小学生刚背上两道杠，都要马上抓一下班级纪律，作为局领导岂能不抓工作？至于抓大抓小，抓轻抓重，抓哪里不抓哪里，这都可以具体分析，但无论如何必须要抓。
+  这位考生当然这脱颖而出，以榜首的位置入选画院。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -217,7 +220,9 @@
   </div>
  </center>
  <p>
-  领导要抓工作，这是一种生活的必然，是常态，就好像父母要唠叨、小孩子要哭闹一样都是生活的常态，你岂能当成是添乱、是节外生枝？他不抓他干啥去？我们每个人在工作之余，都要留足基本的精力和体力去等待领导来抓，随时备抓，枕戈待抓，而不是大惊小怪一味抱怨。
+  <strong>
+   考题三：竹锁桥边卖酒家
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -232,7 +237,7 @@
   </div>
  </center>
  <p>
-  试问，你要写材料，领导忽然说要抓一下卫生，你能说这是添乱吗？还不是马上乖乖扔掉稿子去扫地？你要吃面，领导忽然说咱今天吃饺子，你能说这是瞎指挥吗？还不是只有乖乖剁馅儿去。那么凭什么你要游泳，领导让跑3000米，就成了添乱瞎指挥了呢？
+  这是画院的著名试题之一。众多考生皆重于酒家，以小溪流水、野渡小桥、竹林清风等藉以衬托，皆不中赵佶之意。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -247,7 +252,7 @@
   </div>
  </center>
  <p>
-  三
+  唯有一名叫李唐的画家，独辟蹊径，画了一泓溪水，小桥横卧，桥边则是一片竹林，唯有那郁郁葱葱的翠竹中，挂着一幅迎风招展的酒帘。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -262,7 +267,7 @@
   </div>
  </center>
  <p>
-  再说了，领导要抓，抓什么？尤其是外行的领导抓什么？无非三点：
+  赵佶看后大悦，认为酒家藏在竹林中正符合“锁”字的意境，亲自圈点为第一名。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -277,7 +282,9 @@
   </div>
  </center>
  <p>
-  第一是抓自己感觉懂的，相对容易抓的。
+  <strong>
+   考题四：深山藏古寺
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -292,7 +299,7 @@
   </div>
  </center>
  <p>
-  比如抓精神，抓意志品质，这就比较容易，反正不管什么问题总归都能扯到精神和意志上去。足球输了，排球赢了，你让局领导去训话，他不就讲讲拼搏精神么，总归不会错。
+  这个题目要画好并不容易，画中的古寺要“藏”起来，又要让人觉得它是存在的。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -307,7 +314,7 @@
   </div>
  </center>
  <p>
-  第二是抓容易见效、容易考核的。否则抓了半天不能考核，不能和下属的任免提拔、津贴奖金挂钩，大家都不听我的，我岂不是抓了个寂寞。
+  有的考生在山腰画座古庙，半遮半露，总算有“藏”的意思……
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -322,7 +329,7 @@
   </div>
  </center>
  <p>
-  第三是抓安全稳妥的。也就是说不管怎么狠抓都不会惹事的，以免搞出意外麻烦。毕竟当官以平安为第一。你去抓体育体制改革，那就麻烦，牵一发动全身，各种不讨好，一抓就容易出事。如果是改抓文明卫生那就绝对安全，马桶一天刷八遍都行，我搞卫生总没有错吧？
+  有的在丛林深处画座古庙，有的只画出庙的一角或一段残垣断壁……
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -337,7 +344,7 @@
   </div>
  </center>
  <p>
-  所以你就理解了，领导为什么爱抓体能？因为体能是运动员的短板吗？是的，但还不是最关键的。
+  主考官一连看了很多幅，都不满意，有一幅画深深吸引了他，他再仔细端详了一番，便连连点头称赞，说：“好，好，这才是‘魁选’之作呀！”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -352,7 +359,7 @@
   </div>
  </center>
  <p>
-  最关键的大概还是抓体能感觉很容易，领导抓得上、抓得着，他不陌生。试问谁没跳过绳的？谁小学中学没跑过800米1000米的？对于这些东西，领导熟悉，也就好抓，他就容易理直气壮地去发狠用力抓。
+  那幅画好在哪里呢？那位高明的画家，根本没有画庙，画的是崇山峻岭之中一股清泉飞流而下，泉边有个老态龙钟的和尚，正一瓢一瓢地舀水。就这么一个挑水的和尚，就把“深山藏古寺”的题目表现得透彻极了，把“藏”字表现出来了。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -367,7 +374,7 @@
   </div>
  </center>
  <p>
-  你让令狐冲当领导，肯定就抓喝酒；你让柯镇恶当领导，他肯定就抓听风辨物；让田伯光当领导，他多半就抓仪琳。这都是人之常情，有啥好说的。你如果要我当总局领导，我还能抓什么？我还不就只有抓读金庸。我就出一个《关于进一步强化运动员文化素质恶补文化短板的通知》，说现在运动员普遍文化学习滞后，文化素养不足，所以要严格文化体育双修，人人背唐诗、读金庸。有啥毛病？没毛病啊。
+  和尚挑水，当然是用来烧茶煮饭，洗衣浆衫，这就叫人想到附近一定有庙；和尚年迈，还得自己来挑水，可以想像到那庙是座破败的古庙了。庙一定是在深山中，画面上看不见，这就把“藏”字表现出来了。这幅画比起那些画庙的一角或庙的一段墙垣的，更切合“深山藏古寺”的题意。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -382,7 +389,9 @@
   </div>
  </center>
  <p>
-  而且体能这个东西好考核，至少是他们认为好考核，跑3000米一只计时表就考核了，多简单。并且这个事抓起来安全稳妥，我就不信抓体能、强基础还能有错了？就算万一有问题，我也最多是工作过于简单急躁，无非是工作的方式方法问题，可我毕竟是出于一片把体育搞上去的拳拳之心吧，我动机总没有错吧，我的思想意识总没有错吧，出不了大问题。
+  <strong>
+   考题五：嫩绿枝头红一点
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -397,37 +406,7 @@
   </div>
  </center>
  <p>
-  四
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  最后简单聊一下周继红指导。现在周继红有点背锅，她是游泳协会主席，出来回应了一下媒体关切，就有报道仓促定性，说什么“周继红对加强体能、恶补短板持赞同态度”。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  注意这就不对了，对周是不公允的。怎么就成“持赞同态度”了呢？周继红有什么态度？她没有态度，上面是什么态度，她就是什么态度。华山论剑合理不合理，你们跑去问丘处机、孙不二的意见，孙不二能说啥？她领导定的论剑她能说不合理？
+  “嫩绿枝头红一点”，应该还算好表达，难就难在题目还有后半句“恼人春色不须多”。如何表现这种春色不须多的境界呢？
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -446,7 +425,7 @@
   </ins>
  </center>
  <p>
-  她现在是一个职业官僚，她没有态度的。上面要狠抓体能训练，她当然就坚决支持，否则还能怎么样，坚决反对吗？领导要抓我们几下，就让领导抓呗，只要不严重地、极其过火地动到自己的奶酪，那肯定就是坚决支持的。你放心，回头上面局里要搞纠正，要取消体测，她也会坚决支持。
+  中规中矩的答案就是这样的，直接在绿叶上画了朵红花，或是一丛绿叶中露出朵红花。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -461,7 +440,7 @@
   </div>
  </center>
  <p>
-  再说了，总局的《通知》明确说了：对体测不担当、不作为、搞形式主义，畏缩不前、推进不力的，将对相关责任人严肃处理。话说得这么重，还能不支持吗？
+  但有位画家画了绿树中里一个亭阁，一位仕女正倚栏而立，她娇艳的樱桃小口在一片绿的画面中显得明艳照人。便有一动人情思的感觉，把“一点红”的含意作了灵巧恰当的表现。不用说，这位画家凭借这一巧思脱颖而出。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -476,7 +455,9 @@
   </div>
  </center>
  <p>
-  周在这个事情上的角色是微妙的。一方面，这个事是她的游泳队“惹”的事。“体能测试”一路发酵，被网民调侃，一开始就是从几个游泳队员体测被淘汰开始的，再具体说是从傅园慧等几个明星队员被淘汰开始的。有个别出来抱怨的也是游泳队员。所以某种意义上说她的队伍给组织上“惹事”了，她得站到台前来说点什么。这是让她有一点点挠头的。
+  <strong>
+   考题六：蝴蝶梦中家万里
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -491,7 +472,7 @@
   </div>
  </center>
  <p>
-  不过另一方面，这个事也未必完全就不好。依我看，它恰恰体现出来游泳贯彻上面的体能测试非常给力、非常坚决、非常到位，说淘汰就淘汰，好成绩说不认就不认，绝不是不担当、不作为、搞形式主义。相比之下，反而是象棋队全员通过体测，一个都没淘汰，倒是显得像在搞变通、打折扣一样。建议督查一下象棋。
+  此题取自“蝴蝶梦中家万里，杜鹃枝上月三更”，寓意很深。诗句出现“蝴蝶”、“子规（杜鹃）”、“树枝”、“明月”，表达了游子孤眠异乡的空虚寥落心情。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -506,7 +487,7 @@
   </div>
  </center>
  <p>
-  对于周本人的回应，真的不要过度解读，那里面没有什么信息量的。比如她最后说的：
+  众考生皆不中意，唯一被选中的是王道亨的试卷。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -521,7 +502,7 @@
   </div>
  </center>
  <p>
-  “将通过本次比赛对体能训练进行认真总结，建立起与游泳项目相适应并紧密结合专项、更加完善的基础体能训练和体能竞赛体系。”
+  王道亨所绘的是苏武牧羊图，画面上苏武假寐，在异国的冰天雪地中，正在打瞌睡，睡梦中一定是千万里远的家乡：林木扶疏，双蝶追逐其间，上立子规，月正当空，木影在地。犹闻啼声。王道亨较好地把握了题目的含义，一举夺魁。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -536,7 +517,7 @@
   </div>
  </center>
  <p>
-  大意就是接下来我们将进一步总结，进一步思考，进一步完善。
+  以上，宋徽宗的考试方式叫“诗题取士”，这让画家们深刻领悟到了“没文化真可怕”这个道理。他们不能再死描死背地画画，而要去读书，从中锻练诗意的想像空间，以更高的层次理解绘画。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -551,7 +532,25 @@
   </div>
  </center>
  <p>
-  有的人连这段话也去解读，说什么看来体测要调整，下一步可能要改。其实这有啥可解读的？这里面就一个意思：啥也没说。
+  但是，你别以为考进来就完事儿了，对于考进来的画家，还得按身份分为“士流”和“杂流”，不断培训不断考核，品德智力等全面发展，再分职称。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p style="text-align:center">
+  <img alt="宋徽宗《蜡梅山禽图》" src="https://img2.secretchina.com/pic/2019/6-25/p2454171a579455601-ss.jpg"/>
+  <br>
+   宋徽宗《蜡梅山禽图》是迄今最早一张，“诗、书、画”都是自己原创的作品。（图片来源：国立故宫博物院）
+  </br>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -566,7 +565,11 @@
   </div>
  </center>
  <p>
-  这段话的潜台词是什么呢？就是：我没觉得体测这个东西有问题，我不觉得它不合理。可是你们非说它有问题，非说它不合理，非要我出来讲几句，我又不能完全不给你面子，那么好吧我就只能说：
+  比如宋徽宗就曾经要求画院那帮画师，让他们连孔雀要飞起来的时候，先抬左脚还是右脚，这个都要搞清楚。在这样的格物精神下，出现很多写实的画。比如，宋徽宗的《山禽腊梅图》，这张画是迄今最早一张，“诗、书、画”都是自己原创的作品。直接影响了后来一说起传统
+  <span href="https://www.secretchina.com/news/gb/tag/中国画" target="_blank">
+   中国画
+  </span>
+  就必须是“诗、书、画”的三个经典元素。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -581,7 +584,11 @@
   </div>
  </center>
  <p>
-  它很合理，但是下一步我们会让它更合理。
+  到了公元1126年，金兵攻破汴京，将徽、钦二帝押送北方，汴京被洗劫一空，
+  <span href="https://www.secretchina.com/news/gb/tag/北宋" target="_blank">
+   北宋
+  </span>
+  灭亡，史称“靖康之耻”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -596,7 +603,7 @@
   </div>
  </center>
  <p>
-  你说你去解读啥？
+  被囚禁期间，宋徽宗受尽精神折磨，写下了许多晦恨、哀怨，凄凉的诗句，“家山回首三千里，目断山南无雁飞”，这一句算是真正体会王道亨所绘苏武牧羊图的真正境界了。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -611,7 +618,7 @@
   </div>
  </center>
  <p>
-  相当于记者问：我们觉得华山论剑安排不合理，孙道长你怎么看？
+  于个人，他堪称艺术家，对北宋及中国绘画发展，功不可没，谁也不能否认他在艺术的惊人成就与才华。于国家，昏庸无能，作为一国之主，身负重任，却不务正业。人们总是向往一种完全不同的人生，大风大浪羡慕安宁平静，平淡无奇追求矫情曲折，但事实总逃不过一句“无可奈何”，其实就是逃脱不了神安排的命运，李煜是，赵佶亦是如此。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -625,22 +632,6 @@
    </center>
   </div>
  </center>
- <p>
-  孙不二：欢迎各位到华山来旅游！
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- (文章仅代表作者个人立场和观点)
  <p style="margin-bottom:12px;">
   <hr style="border-top: 1px dashed  ;" width="100%"/>
   <br/>
@@ -659,7 +650,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -691,13 +682,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/948320.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/948320.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/948320.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/06/948320.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/926305.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/926305.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/926305.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/04/926305.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p4/948320.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p6/926305.md' width='0px' height='0px'/>
